@@ -1,5 +1,4 @@
 language: r
-sudo: required
 warnings_are_errors: false
   
 r_github_packages:
