@@ -1,4 +1,5 @@
+For the current development, the user can 
+see: https://github.com/dmpe/rbitly
 
-For the current development the user can view: https://github.com/dmpe/rbitly
-
+###
 June/July 2015 - Initial CRAN Release
